[aliases]
test = pytest

[tool:pytest]
# ignore certain folders and pytest warnings
addopts =
    --ignore build_tools
    --ignore maint_tools
#    --ignore examples
#    --disable-pytest-warnings

filterwarnings =
    # Warnings that we raise:
    ignore::UserWarning

[metadata]
description-file = README.md

[bdist_wheel]
universal=1
